# tyutool

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_ZH.md  README_zh.md  Terms_And_Agreements.md  eslint.config.js  export.bat  export.sh  index.html  lefthook.yml  package.json  pnpm-lock.yaml  requirements.txt  tyutool_cli.py  tyutool_gui.py  vite-plugin-dev-open-log-dir.ts  vite.config.ts  vitest.config.ts
crates/tyutool-cli/: Cargo.toml  README.md
crates/tyutool-cli/src/: main.rs  serve.rs  update.rs
crates/tyutool-core/: Cargo.toml  README.md
crates/tyutool-core/src/: authorize.rs  error.rs  job.rs  lib.rs  plugin.rs  progress.rs  registry.rs  serial.rs  tuya_dev_usb.rs  usb_port_survey.rs
crates/tyutool-core/src/plugins/: bk7231n.rs  esp32.rs  esp32c3.rs  esp32c6.rs  esp32s3.rs  mod.rs  t1.rs  t2.rs  t3.rs  t5.rs
crates/tyutool-core/src/plugins/beken/: chip.rs  command.rs  flash_table.rs  frame.rs  mod.rs  ops.rs  transport.rs
crates/tyutool-core/src/plugins/esp/: chips.rs  common.rs  mod.rs
docs/: performance.csv
resource/: logo.icns
scripts/: bump-version.mjs  dev-web.sh  generate-icon-source.ts  generate-manifest.ts  release-cli.ts  release-gui.ts  sync-gitee-release.sh  tsconfig.json
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
tests/: esp_loader.py  serial_assistant.py  serial_run.py  test_gui_startup.py  test_thread_lifecycle.py
tools/: build_package.bat  build_package.sh  check_tag.py  create_ide_json.py  develop.md  logo2bytes.py  upgrade_config.json
tyutool/: __init__.py
(+153 files in other folders)
