[package]
name = "tyutool-cli"
version = "3.0.0"
edition = "2021"
description = "tyutool CLI — shared tyutool-core flash API (no Tauri)"

[[bin]]
name = "tyutool_cli"
path = "src/main.rs"

[dependencies]
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
tyutool-core = { path = "../tyutool-core" }
reqwest = { version = "0.12", features = ["rustls-tls", "blocking", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", features = [] }
hex = "0.4"
self-replace = "1"
flate2 = "1"
tar = "0.4"
zip = "2"
semver = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
base64 = "0.22"
anyhow = "1"
